# llmengineeringevalragperformance

./: .env.example  .gitattributes  .gitignore  README.md  app.py  linkedinpost.md  pyproject.toml  requirements.txt  testresult.md
.github/: pr_body_chore_pr_workflow.md
.streamlit/: config.toml
knowledge-base/: sample_knowledge.json
